name:                gyromouse
version:             0.0.0.0
license:             GPL-3
author:              PkmX
maintainer:          pkmx.tw@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable gyromouse
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base ==4.7.*, unix == 2.7.*, network ==2.6.*, lens == 4.6.*, bindings-DSL == 1.0.*
  other-modules:       CBindings
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  ghc-options:         -Wall
